[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/player.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0315
height = 2.40961

[sub_resource type="CapsuleShape2D" id=2]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2( -13.5884, -1.29414 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="ToolPosition" type="Position2D" parent="."]
position = Vector2( -17.7944, 3.8147e-06 )
[connection signal="area_entered" from="GrabArea" to="." method="_on_GrabArea_area_entered"]
[connection signal="area_exited" from="GrabArea" to="." method="_on_GrabArea_area_exited"]
